-- StaticCollisionBox
-- StaticCollisionCircle
-- StaticCollisionPolygon
- UI elements can now be hidden based on controller type (hidden-controller-xbox360, etc.)
- Changed default target timestep to 60FPS
- ActionListeners now receive event details via ActionEvent instance
- Improved controller javadocs
- Graphics#drawRect now uses LibGDX ShapeRenderer
- Fixed UI controller input blocking other controller listeners when no input is consumed by UiContainer
- Fixed Button instances not triggering right-click events
- Fixed ScrollBox#setMaxHeight triggering unnecessary layouts
- Fixed Graphics tint value not being set on startup
- Fixed UiContainerRenderTree always set to dirty
- Fixed RepeatableNinePatch not repeating correctly when using TextureRegion
- Fixed UI button up/down controller events triggering when controller is disabled
- Fixed NPE when resetting navigation with no navigation elements configured
- Fixed GridUiNavigation misordering elements when using set#(x,y)
- Fixed GridUiNavigation triggering unnecessary cursor resets
- Fixed hotkeys not triggering if the element was outside of the navigation element node
- Fixed invalid merge invocations in QuadTree implementations

[1.4.9]
- Fix @PostDeserialize not being invoked for nested objects

[1.4.8]
- Fix UiContainer not clearing active action element
- Fix Rectangle returning 0,0 as its center

[1.4.7]
- Graphics can now draw TiledDrawable instances
- Added RepeatedNinePatch which repeats instead of stretches
- UI element backgrounds can now set backgroundMode to "repeat" or "stretch"

[1.4.6]
- Reduce float array allocations in Polygon#setVertices
- Added ScreenBasedGame#getScreenManager and ScreenManager#getGameScreens

[1.4.5]
- Added Shape#add and Shape#subtract methods for modifying position
- QuadTree implementations can now specify a minimum quad size
- Added Positionable#moveTowards for easier movement logic
- Added Positionable#getDistanceTo(x,y)

[1.4.4]